--- a/quiz-app/styles.css
+++ b/quiz-app/styles.css
@@ -1,9 +1,47 @@
 body {
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1 {
+  text-decoration: underline rgb(81, 61, 88) solid;
 }
 
 .info {
   background-color: rgb(158, 158, 197);
-  border-radius: 0.25 rem;
+  border-radius: 15px;
+  text-align: center;
+  margin: auto;
+  padding: 5rem;
+  width: 80%;
+  margin-top: 2rem;
+}
+
+.bookmark {
+  border-radius: 15px;
+  min-width: 40px;
+  min-height: 40px;
+  padding: 2px;
+  display: inline-block;
+  position: relative;
+}
+
+.bookmarkicon {
+  min-width: 40px;
+  min-height: 40px;
+}
+
+.answer {
+  border-radius: 15px;
+  width: 80%;
+  height: 80%;
+}
+
+.tag {
+  border-radius: 10px;
+  min-width: 30px;
+  min-height: 20px;
+  display: inline-block;
 }
 
 img {
@@ -15,3 +53,11 @@ div {
   background-color: rgb(45, 119, 151);
   padding: ;
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(45, 119, 151);
+}
+
+/*fixing the footer position: fixed*/
