--- a/quiz-app/styles.css
+++ b/quiz-app/styles.css
@@ -3,6 +3,10 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.head {
+  position: sticky;
+}
+
 h1 {
   text-decoration: underline rgb(81, 61, 88) solid;
 }
@@ -13,8 +17,11 @@ h1 {
   text-align: center;
   margin: auto;
   padding: 5rem;
-  width: 80%;
+  height: 25vh;
+  width: 40vh;
   margin-top: 2rem;
+  display: fit-content;
+  position: relative;
 }
 
 .bookmark {
@@ -23,7 +30,9 @@ h1 {
   min-height: 40px;
   padding: 2px;
   display: inline-block;
-  position: relative;
+  position: absolute;
+  top: 8px;
+  right: 16px;
 }
 
 .bookmarkicon {
@@ -51,7 +60,6 @@ img {
 div {
   text-align: center;
   background-color: rgb(45, 119, 151);
-  padding: ;
 }
 
 footer {
