--- a/quiz-app/styles.css
+++ b/quiz-app/styles.css
@@ -1,10 +1,26 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 body {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.25rem;
+}
+
+div {
+  background-color: rgb(45, 119, 151);
 }
 
 .head {
   position: sticky;
+  top: 0;
+  z-index: 1;
+}
+img {
+  width: 3rem;
+  height: 3rem;
 }
 
 h1 {
@@ -17,8 +33,8 @@ h1 {
   text-align: center;
   margin: auto;
   padding: 5rem;
-  height: 25vh;
-  width: 40vh;
+  height: 35vh;
+  width: 55vh;
   margin-top: 2rem;
   display: fit-content;
   position: relative;
@@ -31,7 +47,7 @@ h1 {
   padding: 2px;
   display: inline-block;
   position: absolute;
-  top: 8px;
+  top: -16px;
   right: 16px;
 }
 
@@ -39,33 +55,55 @@ h1 {
   min-width: 40px;
   min-height: 40px;
 }
+.question {
+  background-color: rgb(158, 158, 197);
+  display: inline-block;
+  position: absolute;
+  font-weight: bold;
+  top: 3rem;
+  right: 1em;
+}
 
 .answer {
+  background-color: beige;
   border-radius: 15px;
-  width: 80%;
-  height: 80%;
-}
-
-.tag {
-  border-radius: 10px;
-  min-width: 30px;
-  min-height: 20px;
+  height: 10vh;
+  width: 30vh;
   display: inline-block;
+  position: absolute;
+  bottom: 0;
+  right: 7rem;
 }
 
-img {
-  width: 3rem;
-  height: 3rem;
-}
-div {
-  text-align: center;
-  background-color: rgb(45, 119, 151);
-}
+/*
+  .tagcontainer {
+
+      display: flex;
+      gap: 10px;
+      justify-content: space-around;
+  
+  }
+
+
+  .tag {
+    background-color: beige;
+    border-radius: 15px;
+    min-width: 1vh;
+    min-height: 1.5vh;
+    padding: 0.5rem;
+  }
+  */
 
 footer {
-  display: flex;
-  justify-content: center;
   background-color: rgb(45, 119, 151);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
+.navigation {
+  display: flex;
+  gap: 10px;
+  justify-content: space-around;
+}
 /*fixing the footer position: fixed*/
