--- a/quiz-app/styles/styles.css
+++ b/quiz-app/styles/styles.css
@@ -1,70 +1,5 @@
 @import "./components/header.css";
 @import "./global.css";
-
-.card {
-  background-color: rgb(158, 158, 197);
-  border-radius: 15px;
-  text-align: center;
-  margin: auto;
-  padding: 5rem;
-  height: 35vh;
-  width: 55vh;
-  margin-top: 2rem;
-  display: fit-content;
-  position: relative;
-}
-
-h2 {
-  font-size: smaller;
-}
-
-.card__question {
-  margin-bottom: 1.5rem;
-  font-size: 1rem;
-}
-
-.card__button {
-  background-color: transparent;
-  display: block;
-  border: none;
-  color: inherit;
-  font-size: 1rem;
-  font-weight: bold;
-  margin-inline: auto;
-  margin-bottom: 1rem;
-  padding: 1rem 2rem;
-  border-radius: 999px;
-  cursor: pointer;
-}
-
-.card__button:hover {
-  background-color: var(--gray-900);
-}
-
-.card__answer {
-  display: none;
-  text-align: center;
-  background-color: var(--gray-100);
-  margin-inline: -1rem;
-  padding-block: 1rem;
-  color: var(--gray-900);
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-.card__answer--visible {
-  display: block;
-}
-
-footer {
-  background-color: rgb(45, 119, 151);
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-.navigation {
-  display: flex;
-  gap: 10px;
-  justify-content: space-around;
-}
+@import "./components/tags.css";
+@import "./footer.css";
+@import "./cards.css";
