--- a/quiz-app/styles/footer.css
+++ b/quiz-app/styles/footer.css
@@ -1,17 +1,3 @@
-footer {
-  background-color: var(--themecolor);
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-.navigation {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-}
-
-/*unfortunately not spanning the whole width of the <img>*/
 .home__button:hover {
   background-color: rgb(148, 146, 143);
   border-radius: 18px;
@@ -25,4 +11,17 @@ footer {
 .bookmarks__button:hover {
   background-color: rgb(148, 146, 143);
   border-radius: 18px;
+}
+
+footer {
+  background-color: var(--themecolor);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
 }
